Project

General

Profile

Actions

Bug #20355

closed

rgw: "radosgw-admin object unlink" command return EIO

Added by shasha lu almost 7 years ago. Updated over 2 years ago.

Status:
Closed
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

how to reproduce:
1.configured the rgw with rgw override bucket index max shards = 8
2.create a bucket
3.put an object in the bucket
4.radosgw-admin object unlink will return EIO

RGWRados::remove_objs_from_index should open corresponding index shard instead of nonshared index.
open_bucket_index(const RGWBucketInfo& bucket_info, librados::IoCtx& index_ctx, string& bucket_oid) function should be removed.

Actions #2

Updated by Orit Wasserman almost 7 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Orit Wasserman
Actions #3

Updated by Casey Bodley over 2 years ago

  • Status changed from Fix Under Review to Closed
Actions

Also available in: Atom PDF