rgw: using corresponding index shard for objects in RGWRados::remove_objs_from_index

Fixes: http://tracker.ceph.com/issues/20355

Signed-off-by: Shasha Lu <lu.shasha@eisoo.com>